--- a/src/view/insert.css
+++ b/src/view/insert.css
@@ -12,12 +12,30 @@
   display: none !important;
 }
 .article-detail-page {
-  margin-left: auto;
   margin-right: auto;
+  margin-left: auto;
 }
 .author-name {
   pointer-events: none;
 }
-#content {
+#content,
+#article-content {
   user-select: text;
+}
+
+.pia-player-popover {
+  position: fixed;
+  z-index: 9999;
+  max-width: 320px;
+  padding: 8px;
+  background-color: #fff;
+  border-radius: 4px;
+  box-shadow: 0 0 4px rgb(0 0 0 / 25%);
+}
+
+@supports (backdrop-filter: none) {
+  .pia-player-popover {
+    background-color: rgb(255 255 255 / 50%);
+    backdrop-filter: blur(20px);
+  }
 }
