--- a/app/renderer/src/vars.less
+++ b/app/renderer/src/vars.less
@@ -6,8 +6,8 @@
 @text-color: @black;
 @border-radius-base: 8px;
 
-@layout-body-background: mix(@primary-color, @white, 12%);
-@layout-header-background: @primary-color;
+@layout-body-background: transparent;
+@layout-header-background: transparent;
 @layout-header-padding: 0 16px;
 
 @component-background: @white;
