--- a/app/renderer/src/global.less
+++ b/app/renderer/src/global.less
@@ -22,7 +22,7 @@
 
 body {
   user-select: none;
-  background-color: fade(@black, 10%);
+  background-color: fade(@primary-color, 10%);
 }
 
 #root {
