--- a/src/global.scss
+++ b/src/global.scss
@@ -1,5 +1,16 @@
 body {
   margin: 0;
+  background-color: var(--semi-color-bg-0);
+}
+
+::-webkit-scrollbar {
+  background-color: transparent;
+  scrollbar-width: thin;
+
+  &-thumb {
+    background-color: var(--semi-color-fill-0);
+    border-radius: 4px;
+  }
 }
 
 html,
