--- a/src/global.scss
+++ b/src/global.scss
@@ -7,12 +7,21 @@ body {
 
   --semi-color-primary-light-default: rgba(var(--semi-blue-2), 0.5);
   --semi-color-info-light-default: rgba(var(--semi-blue-0), 0.8);
+
+  &[theme-mode='dark'] {
+    --semi-color-nav-bg: rgba(35, 36, 41, 0.16);
+    --semi-color-bg-0: rgba(22, 22, 26, 0.6);
+    --semi-color-bg-1: rgba(35, 36, 41, 0.5);
+    --semi-color-bg-2: rgba(53, 54, 60, 0.8);
+    --semi-color-bg-3: rgba(67, 68, 74, 0.8);
+  }
   margin: 0;
 }
 
 ::-webkit-scrollbar {
   background-color: transparent;
   scrollbar-width: thin;
+  backdrop-filter: saturate(180%) blur(20px);
 
   &-thumb {
     background-color: var(--semi-color-fill-0);
@@ -26,7 +35,7 @@ body,
   height: 100%;
 }
 
-.semi-dropdown-wrapper,
+.semi-dropdown,
 .semi-modal-content {
-  backdrop-filter: blur(12px);
+  backdrop-filter: saturate(180%) blur(20px);
 }
